<resources>
    <string name="app_name">fixer</string>
    <string name="div">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="xor">XOR</string>
    <string name="backspace">⟵</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="opened_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="clear">C</string>
    <string name="exchange">¤</string>
    <string name="equal">=</string>
    <string name="complete">✔</string>
    <string name="error">X</string>
    <string name="base_url">http://api.fixer.io</string>
</resources>
